re PR fortran/30779 ([4.1, 4.2 only] incomplete file triggers ICE)

2007-02-16  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/30779
	* scanner.c (gfc_next_char_literal): Add check for end of file after
	call to advance_line.

2007-02-16  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/30779
	* gfortran.dg/error_recovery_3.f90: New test.

From-SVN: r122059